# hop-skip-bite

./: .gitignore  LICENSE  Makefile  README.md  bugplot.R  compile.sh  file_format.R  generate_landscape.R  sir_run.R  testint.R  testit.R  try.R  verhulst_run.R
doc/: Makefile  excess_hazard.py  excess_plot.py  growth.py  hopskip.tex  vectored.bib  vectored.tex
hopskip/: DESCRIPTION  NAMESPACE  cleanup  config.h.in  configure.ac
hopskip/R/: RcppExports.R  script.R
hopskip/man/: bugs.Rd  hopskip-package.Rd
hopskip/src/: Makevars.in  RcppExports.cpp  bugs.cpp  bugs.hpp  excess_growth.cpp  excess_growth.hpp  hsb_version.hpp  rcpp_hello_world.cpp  rng.hpp  segment_intersect.cpp  segment_intersect.hpp  simple_hazard.cpp  simple_hazard.hpp  trajectory_observer.hpp
hopskip/src/semimarkov-0.1/: smv_config.hpp
script/: Makefile  calculate_crossings.R  cb.R  file_format.R  generate_landscape.R  one_house.txt  rhdf5_install.R  sir_run.R  verhulst_lives.R  verhulst_plot.R
src/: Makefile  bugs.cpp  bugs.hpp  getgit.py  main.cpp  simple_hazard.cpp  simple_hazard.hpp  spatial_process.hpp
